# Upgraded-blog-Blog-post-capstone

./: .gitignore  README.md  admin.py  extensions.py  forms.py  main.py  models.py  pyproject.toml  utils.py
static/css/: styles.css
templates/: 403.html  about.html  admin_portal.html  contact.html  footer.html  header.html  index.html  login.html  make-post.html  post.html  register.html
