[project]
name = "upgraded-blog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "bootstrap-flask>=2.2.0",
    "flask-ckeditor>=0.4.6",
    "flask-wtf>=1.2.1",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.25",
    "werkzeug>=3.0.0",
    "wtforms>=3.0.1",
    "bleach>=6.1.0",
    "flask-login>=0.6.3",
    "flask-gravatar>=0.5.0",
    "email-validator>=2.3.0",
]
